--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,10 @@
     <string name="find_beer">Find Beer!</string>
     <string name ="brands"></string>
 
-    <string-array name="beer_types">
-        <item>Light</item>
-        <item>Dark</item>
+    <string-array name="beer_colors">
+        <item>light</item>
+        <item>dark</item>
+        <item>amber</item>
+        <item>brown</item>
     </string-array>
 </resources>
